nwp-api/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    ns: nwp-api
  creationTimestamp: null
  name: nwp-api
spec: {}
status: {}
