nwp-api/pod-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-a
  namespace: nwp-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: pod-a
  namespace: nwp-api
spec:
  containers:
  - image: nginx
    name: pod-a
    ports:
    - containerPort: 80
