nwp-api/pod-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-b
  namespace: nwp-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: backend
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: pod-b
  namespace: nwp-api
spec:
  containers:
  - image: nginx
    name: pod-b
    ports:
    - containerPort: 80
